--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Pay Pal Splash Page</title>
 </head>
 <body>
-	<div>
-		<ul>
-			<li>cars</li>
-			<li>planes</li>
-			<li>trees</li>
-			<li>train</li>
-		</ul>
-	</div>
+
 </body>
 </html>
